--- a/embed_twitch.html
+++ b/embed_twitch.html
@@ -19,7 +19,7 @@
           new Twitch.Embed("twitch-embed", {
             width: 1500,
             height: 650,
-            channel: "Luis_Beast673",
+            channel: "YOUR_CHANNEL_NAME_HERE",
             parent: ["embed.example.com", "othersite.example.com"]
           });
         </script>
